# hypergl_core

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  build-web.js  build-web.sh  problems.md  start-web.sh
examples/: main.rs  main2.frag  main2.rs  main2.vert  main3.frag  main3.rs  main3.vert
examples/test/: main.rs
examples/test2/: main.rs
examples/web/: index.html
src/: app.rs  application.rs  camera.rs  config.rs  lib.rs  main.rs  node.rs  test.rs
src/ecs/: entity.rs  mod.rs  system.rs
src/ecs/components/: camera.rs  light.rs  mod.rs  model.rs
src/graphics/: drawable.rs  index_buffer.rs  material.rs  mesh.rs  mod.rs  model.rs  renderer.rs  shader.rs  shader.wgsl  shader_variable.rs  texture.rs  vertex.rs  vertex_buffer.rs  vertex_format.rs
src/graphics/base_material/: material.rs  shade.wgsl.hbs  shader.rs  shader.wgsl
src/utils/: mod.rs  native.rs  web.rs
web/: .gitignore  package.json  tsconfig.json  webpack.config.js
web/src/: bootstrap.js  hypergl_core.d.ts  hypergl_core.js  hypergl_core_bg.wasm  main.js  main_bg.d.ts  main_bg.wasm
