[package]
name = "hypergl_core"
version = "0.1.0"
authors = ["laopo001 <353272497@qq.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
# takeable-option = "0.4.0"
glow = { git = 'https://github.com/grovesNL/glow.git' }
lazy_static = "1.3.0"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = "0.21.0"

[target.wasm32-unknown-unknown.dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGlFramebuffer",
  "WebGlProgram",
  "WebGlRenderbuffer",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "WebGlSampler",
  "WebGlShader",
  "WebGlSync",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "Window",
]

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[build-dependencies]
gl_generator = "0.11.0"