[package]
name = "hypergl_core"
version = "0.1.0"
authors = ["laopo001 <353272497@qq.com>"]
# build = "build.rs"
edition = "2018"

[dependencies]
# glow = { path = './glow' }
lazy_static = "1.3.0"
cfg-if = "0.1.6"

[dependencies.glow]
path = "glow"
features = ["glutin"]

[dependencies.wasm-math]
path = "wasm-math"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = "0.21.0"

[target.wasm32-unknown-unknown.dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGlFramebuffer",
  "WebGlProgram",
  "WebGlRenderbuffer",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "WebGlSampler",
  "WebGlShader",
  "WebGlSync",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "Window",
  "console",
]

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.22"

[features]
default = []
webgl1 = []
webgl2 = []

[package.metadata.commands]
wasm-build = "cargo build --example main2 --target wasm32-unknown-unknown"
wasm-bindgen = "wasm-bindgen target/wasm32-unknown-unknown/debug/examples/main2.wasm --out-dir web/src/"
wbuild = "cargo cmd wasm-build && cargo cmd wasm-bindgen"
start = "cargo run --example main2"
build = "cargo build --example main2"