[package]
edition = "2021"
name = "hyper-rust"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = {version = "1.4", features = ["derive"]}
cfg-if = "1"
cgmath = "*"
env_logger = "0.9"
fs_extra = "1.2"
glam = "0.22.0"
glob = "0.3"
lazy_static = "*"
log = "0.4"
nalgebra = "*"
pollster = "0.2"
tobj = {version = "3.2.1", features = [
  "async",
]}
wgpu = "0.14"
winit = "0.27.1"

[dependencies.image]
default-features = false
features = ["png", "jpeg"]
version = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
reqwest = {version = "0.11"}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = {version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  "Location",
]}
wgpu = {version = "0.14", features = ["webgl"]}
